<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ing_richardavid.listview.activities.ActivityListViewPersonalized">

    <Button
        android:id="@+id/activityLVPersonalizedIdGoToGVPersonalized"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityLVPersonalizedBtnGoToGVPersonalized"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/activityLVPersonalizedIdTxtVName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/activityLVPersonalizedPlaceHolderName"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activityLVPersonalizedIdBtnAdd"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activityLVPersonalizedIdBtnAdd"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityLVPersonalizedBtnAdd"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/activityLVPersonalizedIdTxtVName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityLVPersonalizedIdTxtVName"
        app:layout_constraintVertical_bias="0.4" />

    <ListView
        android:id="@+id/activityLVPersonalizedIdLVData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLVPersonalizedIdTxtVName"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/activityLVPersonalizedIdGoToGVPersonalized" />

</android.support.constraint.ConstraintLayout>
