<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ing_richardavid.listview.activities.ActivityListViewPersonalized">

    <Button
        android:id="@+id/activityGVPersonalizedIdGoToDynamicGV"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityGVPersonalizedBtnGoToDynamicGV"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/activityGVPersonalizedIdTxtVName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/activityGVPersonalizedPlaceHolderName"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activityGVPersonalizedIdBtnAdd"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activityGVPersonalizedIdBtnAdd"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityGVPersonalizedBtnAdd"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/activityGVPersonalizedIdTxtVName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityGVPersonalizedIdTxtVName"
        app:layout_constraintVertical_bias="0.4" />

    <GridView
        android:id="@+id/activityGVPersonalizedIdGVData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toTopOf="@+id/activityGVPersonalizedIdGoToDynamicGV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityGVPersonalizedIdTxtVName" />
</android.support.constraint.ConstraintLayout>
